@@ -1,5 +1,8 @@
 2006-01-12  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/libmunge/ctx.c(_munge_ctx_set_err):
+	  Fixed potential NULL dereference of ctx in return value.
+
 	* src/munge/remunge.c(parse_cmdline):
 	  Fixed NUL termination of payload data.
 
